@@ -1,3 +1,6 @@
+2015-02-11
+	- Speichern vom Verlauf im pdf hinzugefügt.
+
 2015-02-09
 	- Name zu „lichtgehen“ geändert
 
